# C-and-CPP

./: gui.cpp
C/LinkedListPractice/Automated/: Nodes.c  Nodes.h  bin  main.c
C/LinkedListPractice/Manual/: Node.c  Node.h  bin  main.c
C/OOP in C/: Person.h  main.c
C/OOP practice/: Person.c  bin
CMake projects/Book exercise/: hello
CMake projects/Book exercise/Single Code/: CMakeLists.txt  main.cpp
CMake projects/Book exercise/Static and shared library from object/: CMakeLists.txt  Message.cpp
CMake projects/Book exercise/multi files/: CMakeLists.txt  hello_world.cpp
CPSC 221/: 1DQuadTreePython.py  betterUnionFind.cpp  graphTraversal.cpp  maxHeap.cpp  unionFind.cpp
CPSC 221/DiGraph/: CMakePresets.json
CPSC 221/DiGraph/include/: DiGraph.hpp
CPSC 221/DiGraph/src/: DiGraph.cpp  main.cpp
CPSC 221/graph/: CMakeLists.txt
CPSC 221/graph/include/: graph.hpp
CPSC 221/graph/src/: graph.cpp  main.cpp
CPSC 221/kruskalAlgorithm/: CMakeLists.txt  CMakePresets.json
CPSC 221/kruskalAlgorithm/inc/: graph.hpp
CPSC 221/kruskalAlgorithm/src/: graph.cpp  main.cpp
Cpp/: How to compile cpp projects  Makefile  bin
Cpp/How to setup/Eigen/cmake include/: How to?
Cpp/How to setup/Eigen/direct include/: my_program
Cpp/How to setup/SMFL/CLion configuration template/: main.cpp
Cpp/Implementations/LinkedList/: LinkedList.h  Nodes.h  main.cpp
Cpp/Implementations/Recursion/factorial/: bin  factorial.h  main.cpp
Cpp/Implementations/Recursion/fibo/: bin  fibo.cpp  fibo.h
Cpp/Implementations/linkedlist_newversoin/: CMakeLists.txt
Cpp/LinkedList/: LinkedList.cpp  Nodes.cpp
Cpp/Recursion/factorial/: factorial.cpp
Cpp/Recursion/fibo/: main.cpp
Cpp/inc/: Person.h
Cpp/src/: Person.cpp  func.cpp  main.cpp
Eigen/cmake include/: CMakeLists.txt  How to?
Eigen/direct include/: compile.sh  my_program.cpp
QT/QtHelloWorld/: Makefile  QtHelloWorld  QtHelloWorld.pro  main.cpp
SMFL/CLion configuration template/: CMakeLists.txt
TEST/: Hello.c
Tutorials/: Compiling multiple files.txt
Tutorials/Debugger/: broken
Tutorials/Important Notes/: newTextFile
Tutorials/OOP/: first_test.cpp  hello
Vsualization with SFML/BallsInBox/: CMakeLists.txt  README.md  main.cpp
Vsualization with SFML/BallsInBox/libs/: Ball.cpp  Ball.h  Sketch.cpp  Sketch.h
Vsualization with SFML/Oscillator_withRKSolver/: CMakeLists.txt  README.md  main.cpp
Vsualization with SFML/Oscillator_withRKSolver/libs/: Ball.cpp  Ball.h  Physics.cpp  Physics.h  Sketch.cpp  Sketch.h
Vsualization with SFML/Pendulum/: CMakeLists.txt  README.md  main.cpp
Vsualization with SFML/Pendulum/libs/: Ball.cpp  Ball.h  Physics.cpp  Physics.h  PlayGround.cpp  PlayGround.h  Sketch.cpp  Sketch.h
Vsualization with SFML/SillyDoublePendulum/: CMakeLists.txt  README.md  main.cpp
Vsualization with SFML/SillyDoublePendulum/libs/: Line.cpp  Sketch.cpp  Sketch.h
